k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vista
  namespace: vista
  labels:
    app.kubernetes.io/name: vista
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vista
    app.kubernetes.io/component: server
  ports:
  - name: http
    port: 8080
    targetPort: 3000
    protocol: TCP
